<?xml version="1.0"?>
<package format="2">
  <name>multi_map_nav</name>
  <version>0.1.0</version>
  <description>Multi-map navigation with wormhole transitions for TurtleBot3</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <build_depend>sqlite3</build_depend>
  <exec_depend>sqlite3</exec_depend>

  <export>
  </export>
</package>